--- a/app/src/main/res/layout/activity_audio_record.xml
+++ b/app/src/main/res/layout/activity_audio_record.xml
@@ -5,6 +5,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/black">
 
+    <!--
     <org.spacebison.multimic.GainIndicator
         android:id="@+id/amplitudeImage"
         android:layout_width="wrap_content"
@@ -13,6 +14,7 @@
         android:layout_margin="16dp"
         custom:color="@color/gray"
         custom:clipColor="@color/orange"/>
+        -->
 
     <TextView
         android:id="@+id/recordTime"
@@ -20,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textColor="@color/gray"
+        android:textSize="30sp"
         android:text="00:00"/>
 
 </RelativeLayout>
