--- a/app/src/main/res/layout/activity_server_search.xml
+++ b/app/src/main/res/layout/activity_server_search.xml
@@ -4,27 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    tools:context="org.spacebison.multimic.ServerSearchActivity"
+    tools:context="org.spacebison.multimic.ui.ServerSearchActivity"
+    android:background="@drawable/bg_tile"
     android:orientation="vertical">
 
-    <LinearLayout
+
+    <Button
+        android:id="@+id/searchButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Search"
-            android:onClick="clickSearch"
-            />
-
-    </LinearLayout>
+        android:text="@string/search"/>
 
     <ListView
         android:id="@+id/serverList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="#77ffffff"/>
 
 </LinearLayout>
