--- a/app/src/main/res/layout/activity_audio_record.xml
+++ b/app/src/main/res/layout/activity_audio_record.xml
@@ -3,10 +3,10 @@
                 xmlns:custom="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/black">
+                android:background="@drawable/bg_tile">
 
     <!--
-    <org.spacebison.multimic.GainIndicator
+    <org.spacebison.multimic.ui.GainIndicator
         android:id="@+id/amplitudeImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
