--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="@color/colorPrimaryBg"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/bg_tile">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,8 +24,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            style="@style/ButtonStyle"
-            android:text="Client"
+            android:text="@string/client"
             android:onClick="clickClient"/>
 
         <View
@@ -37,8 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            style="@style/ButtonStyle"
-            android:text="Server"
+            android:text="@string/server"
             android:onClick="clickServer"/>
 
     </LinearLayout>
