--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,9 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#667987</item>
+        <item name="colorPrimary">#2c343a</item>
         <item name="colorPrimaryDark">#2c343a</item>
         <item name="colorAccent">#6cc9dd</item>
     </style>
