--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,17 +11,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:background="@drawable/bg_tile">
+    android:background="@drawable/bg">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
 
         <Button
             android:id="@+id/clientButton"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/client"
@@ -29,11 +29,11 @@
 
         <View
             android:layout_width="@dimen/activity_horizontal_margin"
-            android:layout_height="0dp"/>
+            android:layout_height="@dimen/activity_horizontal_margin"/>
 
         <Button
             android:id="@+id/serverButton"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/server"
