--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,6 @@
             android:text="@string/client"
             android:onClick="clickClient"/>
 
-        <View
-            android:layout_width="@dimen/activity_horizontal_margin"
-            android:layout_height="@dimen/activity_horizontal_margin"/>
-
         <Button
             android:id="@+id/serverButton"
             android:layout_width="wrap_content"
@@ -38,6 +34,14 @@
             android:layout_weight="1"
             android:text="@string/server"
             android:onClick="clickServer"/>
+
+        <Button
+            android:id="@+id/playerButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/player"
+            android:onClick="clickPlayer"/>
 
     </LinearLayout>
 
