--- a/app/src/main/res/layout/activity_server_search.xml
+++ b/app/src/main/res/layout/activity_server_search.xml
@@ -4,10 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="org.spacebison.multimic.ui.ServerSearchActivity"
     android:background="@drawable/bg"
     android:orientation="vertical">
-
 
     <Button
         android:id="@+id/searchButton"
