--- a/app/src/main/res/layout/list_item_track_controls.xml
+++ b/app/src/main/res/layout/list_item_track_controls.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:animateLayoutChanges="true"
+    android:background="#07FFFFFF"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
@@ -48,7 +49,7 @@
                     android:id="@+id/volumeSeek"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:focusable="false"
                     android:max="256"
                     android:progress="256"/>
 
@@ -71,7 +72,7 @@
                     android:id="@+id/panSeek"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:focusable="false"
                     android:max="256"
                     android:progress="128"/>
 
@@ -80,27 +81,47 @@
 
 
         </LinearLayout>
+
         <LinearLayout
+            android:id="@+id/offsetControl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
             android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/minusButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:text="-"/>
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Offset:"/>
+
+                <TextView
+                    android:id="@+id/offsetText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0 ms"/>
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/plusButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="-"/>
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:text="Delay: 0"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:focusable="false"
                 android:text="+"/>
 
         </LinearLayout>
