--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,9 +1,11 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    tools:context=".ui.PlayerActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
@@ -56,7 +58,7 @@
         android:id="@+id/fab"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|right"
-        app:srcCompat="@drawable/ic_mic_24dp_white"
+        app:srcCompat="@drawable/ic_play_arrow_24dp"
         style="@style/FabStyle"/>
 
 </android.support.design.widget.CoordinatorLayout>
